# robotarm

./: .gitignore
robotarm_controller/: Cargo.toml
robotarm_controller/src/: logging.rs  main.rs
robotarm_controller/src/kinematics/: arm.rs
robotarm_controller/src/serial/: codec.rs  mod.rs
robotarm_controller/src/simplefoc/: mod.rs  types.rs
robotarm_controller/src/ui/: app.rs  comms.rs  controls.rs  mod.rs  plot.rs
robotarm_mcu/: Cargo.toml  embed.toml  rust-toolchain.toml
robotarm_mcu/.cargo/: config.toml
robotarm_mcu/src/: configs.rs  init.rs  main.rs
robotarm_mcu/src/comms/: mod.rs  rs485.rs  usb.rs
robotarm_mcu/src/hardware/: acs712.rs  ads1256.rs  as5048a.rs  as5600.rs  current_sensor.rs  encoder_sensor.rs  ina226.rs  ina240.rs  mod.rs  mt_6701.rs  mt_6701_adc.rs  mt_6701_ssi.rs  pwm_driver.rs  smooth_sensor.rs
robotarm_mcu/src/simplefoc/: bldc.rs  commands.rs  control_loop.rs  foc.rs  foc_types.rs  lowpass.rs  mod.rs  pid.rs  pid_tuning.rs  pid_tuning_vel.rs  pwm_driver.rs  shaft_position.rs  types.rs
robotarm_protocol/: Cargo.toml
robotarm_protocol/src/: lib.rs  types.rs
