[package]
name = "robotarm_controller"
version = "0.1.0"
edition = "2024"

[dependencies]

robotarm_protocol = { path = "../robotarm_protocol" }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }

tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
    "local-time",
    "env-filter",
    "json",
    "registry",
] }
env_logger = "0.11.8"
anyhow = "1.0.101"
serde = "1.0.228"
byteorder = "1.5.0"
chrono = "0.4.43"

egui = "0.32.3"
ecolor = "0.32.3"
# eframe = { version = "0.31.1", features = ["persistence", "wgpu"] }
eframe = { version = "0.32.3", features = ["persistence"] }
egui_extras = { version = "0.32.3", features = [
    "file",
    "image",
    "svg",
    "http",
] }
# egui_plot = "0.34.0"
egui-plotter = "0.6.0"
plotters = { version = "0.3.7" }

tokio = { version = "1.49.0", features = ["full"] }
tokio-serial = "5.4.5"
bytes = "1.11.1"
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.31"
serialport = "4.8.1"
crossbeam-channel = "0.5.15"
# serial2 = { version = "0.2.33", features = ["windows"] }

k = "0.32.0"
nalgebra = "0.30.1"

