[package]
name = "robotarm_mcu"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[dependencies]

robotarm_protocol = { path = "../robotarm_protocol", features = ["defmt"] }

embassy-executor = { version = "0.9", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.9.0", features = [
  "defmt",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.5"

defmt = "1.0.1"
defmt-rtt = "1.0"

as5600 = { version = "0.8.0", features = ["defmt", "async"] }
fixed = { version = "1.30.0", default-features = false, features = ["defmt"] }

libm = "0.2.16"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
static_cell = "2.1.1"
# embassy-usb-logger = "0.5.1"
log = "0.4"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"

postcard = { version = "1.1.3", default-features = false }
serde = { version = "1.0.228", default-features = false }

ryu = "1.0.23"
heapless = { version = "0.9.2", default-features = false, features = [] }

discrete_pid = { version = "0.1.0", default-features = false }

# max485-async = "0.2.0"
# embedded-io-async = "0.7"
embedded-io-async = "0.6.1"
micromath = { version = "2.1.0", features = ["vector", "quaternion"] }

bitflags = "2.4"
byteorder = { version = "1", default-features = false }

[patch.crates-io]
as5600 = { git = "https://github.com/barafael/as5600-rs" }
