[package]
name = "robotarm_protocol"
version = "0.1.0"
edition = "2024"

[features]
default = []
defmt = ["dep:defmt"]

[dependencies]
postcard = { version = "1.1.3", default-features = false }
serde = { version = "1.0.228", default-features = false }
heapless = { version = "0.9.2", default-features = false, features = ["serde"] }
defmt = { version = "1.0.1", optional = true }